--- a/sample.html
+++ b/sample.html
@@ -5,7 +5,7 @@
         <title>My test page</title>
         <link rel="icon" href="./images/favicon.png">
         <meta name="author" content="Akihiro Yoza">
-        <meta name="description" content="hogehogehoge~~"
+        <meta name="description" content="hogehogehoge~~">
     </head>
     <body>
         <h2>まずは書いてみよう!</h2>
